chore: update task scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Bogdan Morozyuk <bogdan7morozyuk@gmail.com>",
   "private": true,
   "scripts": {
+    "start": "npm run",
+    "serve": "quasar dev",
+    "build": "quasar build",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
