--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
@@ -34,6 +35,7 @@
     "@quasar/app-vite": "^1.0.0",
     "@quasar/quasar-app-extension-testing": "^2.0.4",
     "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-alpha.10",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -41,10 +43,10 @@
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-vue": "^9.0.0",
-    "typescript": "^4.5.4",
     "eslint-plugin-jest": "^25.2.2",
-    "majestic": "^1.7.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "majestic": "^1.7.0",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
