--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^2.2.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
